@@ -7,6 +7,7 @@
 * A-#: Page to # page.
 * Add gravatar support
 * C-p: Toggle auto poll.
+* C-j / C-k: Jump and scroll to next or previous element.
 
 == v0.4 / 2015-08-15
 
